--- a/views/temp3.ejs
+++ b/views/temp3.ejs
@@ -187,13 +187,13 @@
                     <div class="row">
                         <div class="heading col-12">
                             <h1>
-                                JENNIFER <br />
-                                WATSON
+                                <%= data.firstName %> <br />
+                                <%= data.lastName %>
                             </h1>
                         </div>
                         <div class="mid-link col-12 d-flex justify-content-between">
-                            <p>USER EXPERIENCE DESIGNER</p>
-                            <a href="javascript:;">WWW.JWATSON.COM</a>
+                            <p><%= data.occupation %></p>
+                            <a href="javascript:;"><%= data.website %></a>
                         </div>
                         <div class="col-4">
                             <div class="col-12 about-head d-flex align-items-center">
@@ -204,12 +204,7 @@
                             </div>
                             <div class="col-12 about-content">
                                 <p>
-                                    Lorem Ipsum is simply dummy text of the printing and
-                                    typesetting industry. Lorem Ipsum has been the industry's
-                                    standard dummy text ever since the 1500s, when an unknown
-                                    printer took a galley of type and scrambled it to make a type
-                                    specimen book. It has survived not only five centuries, but
-                                    also the leap into electronic typesetting.
+                                    <%= data.profile %>
                                 </p>
                             </div>
                             <div class="col-12 about-head d-flex align-items-center profiles-center">
@@ -220,15 +215,15 @@
                             </div>
                             <div class="col-12 contact-content">
                                 <h5>Address:</h5>
-                                <p>12th Avenue Street Australia 40000</p>
+                                <p><%= data.address %></p>
                                 <h5>Mobile:</h5>
-                                <p>02800200</p>
+                                <p><%= data.phone %></p>
                                 <h5>Home:</h5>
-                                <p>02800200</p>
+                                <p><%= data.phone %></p>
                                 <h5>Email:</h5>
-                                <p>johnwatson@gmail.com</p>
+                                <p><%= data.email %></p>
                                 <h5>Website:</h5>
-                                <p>jwatson.com</p>
+                                <p><%= data.website %></p>
                                 <h5>Skype:</h5>
                                 <p>username</p>
                             </div>
@@ -251,54 +246,6 @@
                                         <button class="skilly"></button>
                                     </div>
                                 </div>
-                                <div class="skill-single d-flex justify-content-between align-items-center">
-                                    <div class="skill-content-head">
-                                        <h5>SKILL 02</h5>
-                                    </div>
-                                    <div class="skill-content-shows">
-                                        <button class="skilly"></button>
-                                        <button class="skilly"></button>
-                                        <button class="skilln"></button>
-                                        <button class="skilln"></button>
-                                        <button class="skilln"></button>
-                                    </div>
-                                </div>
-                                <div class="skill-single d-flex justify-content-between align-items-center">
-                                    <div class="skill-content-head">
-                                        <h5>SKILL 03</h5>
-                                    </div>
-                                    <div class="skill-content-shows">
-                                        <button class="skilly"></button>
-                                        <button class="skilly"></button>
-                                        <button class="skilly"></button>
-                                        <button class="skilly"></button>
-                                        <button class="skilln"></button>
-                                    </div>
-                                </div>
-                                <div class="skill-single d-flex justify-content-between align-items-center">
-                                    <div class="skill-content-head">
-                                        <h5>SKILL 04</h5>
-                                    </div>
-                                    <div class="skill-content-shows">
-                                        <button class="skilly"></button>
-                                        <button class="skilly"></button>
-                                        <button class="skilly"></button>
-                                        <button class="skilln"></button>
-                                        <button class="skilln"></button>
-                                    </div>
-                                </div>
-                                <div class="skill-single d-flex justify-content-between align-items-center">
-                                    <div class="skill-content-head">
-                                        <h5>SKILL 05</h5>
-                                    </div>
-                                    <div class="skill-content-shows">
-                                        <button class="skilly"></button>
-                                        <button class="skilly"></button>
-                                        <button class="skilln"></button>
-                                        <button class="skilln"></button>
-                                        <button class="skilln"></button>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div class="col-8">
@@ -310,42 +257,18 @@
                                     <h3>EXPERIENCES</h3>
                                 </div>
                                 <div class="experience-content">
-                                    <div class="experience-single">
-                                        <div class="experience-name ">
-                                            <h4>GRAPHIC DESIGNER</h4>
-                                            <p>2015-2017</p>
+                                    <% data.experience.forEach(function(exp) { %>
+                                        <div class="experience-single">
+                                            <div class="experience-name ">
+                                                <h4><%= exp.position %></h4>
+                                                <p><%= exp.from %> - <%= exp.to ? exp.to : 'Present' %></p>
+                                            </div>
+                                            <div class="experience-about">
+                                                <h4><%= exp.company %></h4>
+                                                <p><%= exp.about %></p>
+                                            </div>
                                         </div>
-                                        <div class="experience-about">
-                                            <h4>SOFT DESIGN STUDIOS</h4>
-                                            <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium<br> feliscon
-                                                lore ipsum dolor tringilla. lorem lorem ipsum. ollcitudin est<br> dolor
-                                                time. Done cporttitor dolor kiren</p>
-                                        </div>
-                                    </div>
-                                    <div class="experience-single ">
-                                        <div class="experience-name">
-                                            <h4>WEB DESIGNER</h4>
-                                            <p>2013-2015</p>
-                                        </div>
-                                        <div class="experience-about">
-                                            <h4>WEB TECH LTD</h4>
-                                            <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium<br> feliscon
-                                                lore ipsum dolor tringilla. lorem lorem ipsum. ollcitudin est<br> dolor
-                                                time. Done cporttitor dolor kiren</p>
-                                        </div>
-                                    </div>
-                                    <div class="experience-single">
-                                        <div class="experience-name ">
-                                            <h4>LEAD WEB DESIGNER</h4>
-                                            <p>2010-2013</p>
-                                        </div>
-                                        <div class="experience-about">
-                                            <h4>SOFT DESIGN STUDIOS</h4>
-                                            <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium<br> feliscon
-                                                lore ipsum dolor tringilla. lorem lorem ipsum. ollcitudin est<br> dolor
-                                                time. Done cporttitor dolor kiren</p>
-                                        </div>
-                                    </div>
+                                      <% }); %>
                                 </div>
                                 <div class=" about-head d-flex align-items-center">
                                     <div class="about-head-icon">
@@ -354,42 +277,18 @@
                                     <h3>EDUCATION</h3>
                                 </div>
                                <div class="experience-content">
-                                <div class="experience-single">
-                                    <div class="experience-name ">
-                                        <h4>UNIVERSITY OF LOREM</h4>
-                                        <p>2008-2010</p>
-                                    </div>
-                                    <div class="experience-about">
-                                        <h4>CERTIFICATE OF WEB TRAINIG</h4>
-                                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium<br> feliscon
-                                            lore ipsum dolor tringilla. lorem lorem ipsum. ollcitudin est<br> dolor
-                                            time. Done cporttitor dolor kiren</p>
-                                    </div>
-                                </div>
-                                <div class="experience-single ">
-                                    <div class="experience-name">
-                                        <h4>UNIVERSITY OF LOREM</h4>
-                                        <p>2007-2009</p>
-                                    </div>
-                                    <div class="experience-about">
-                                        <h4>BECHELOR OF ART DIRECTOR</h4>
-                                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium<br> feliscon
-                                            lore ipsum dolor tringilla. lorem lorem ipsum. ollcitudin est<br> dolor
-                                            time. Done cporttitor dolor kiren</p>
-                                    </div>
-                                </div>
-                                <div class="experience-single">
-                                    <div class="experience-name ">
-                                        <h4>UNIVERSITY OF LOREM</h4>
-                                        <p>2007-2009</p>
-                                    </div>
-                                    <div class="experience-about">
-                                        <h4>BECHELOR OF ART DIRECTOR</h4>
-                                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium<br> feliscon
-                                            lore ipsum dolor tringilla. lorem lorem ipsum. ollcitudin est<br> dolor
-                                            time. Done cporttitor dolor kiren</p>
-                                    </div>
-                                </div>
+                                    <% data.education.forEach(function(edu) { %>
+                                        <div class="experience-single">
+                                            <div class="experience-name ">
+                                                <h4><%= edu.name %></h4>
+                                                <p><%= edu.from %> - <%= edu.to ? edu.to : 'Present' %></p>
+                                            </div>
+                                            <div class="experience-about">
+                                                <h4><%= edu.degree %><br /></h4>
+                                                <p><%= edu.about %></p>
+                                            </div>
+                                        </div>
+                                    <% }); %>
                                </div>
                                 <div class=" about-head d-flex align-items-center">
                                     <div class="about-head-icon">
